force-app/main/default/objects/Smart_Search_Setting__c/Smart_Search_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Smart Search Setting</label>
</CustomObject>