force-app/main/default/objects/Smart_Search_Setting__c/fields/app_id__c.field-meta.xml
<CustomField>
    <fullName>app_id__c</fullName>
    <label>app_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>