force-app/main/default/objects/Smart_Search_Setting__c/fields/base_url__c.field-meta.xml
<CustomField>
    <fullName>base_url__c</fullName>
    <label>base_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>