force-app/main/default/objects/Smart_Search_Setting__c/fields/high_risk_id__c.field-meta.xml
<CustomField>
    <fullName>high_risk_id__c</fullName>
    <label>high_risk_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>