force-app/main/default/objects/Smart_Search_Setting__c/fields/secret__c.field-meta.xml
<CustomField>
    <fullName>secret__c</fullName>
    <label>secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>