force-app/main/default/objects/Smart_Search_Setting__c/fields/smart_search_url__c.field-meta.xml
<CustomField>
    <fullName>smart_search_url__c</fullName>
    <label>smart_search_url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>